src/sass/_social.sass
.social
    padding: 100px 0 88px

.social-box
    width: 446px
    border-radius: 15px
    background-color: #f4f4f4
    margin-right: 38px
    overflow: hidden
    position: relative
    &:nth-child(2n+2)
        margin-right: 38px
    &:nth-child(3n+3)
        margin-right: 0
    a
        position: absolute
        width: 100%
        height: 100%

@media screen and (max-width: 1450px) 
    .social-boxes
        flex-direction: row

@media ( max-width: 992px )
    .social
        &-title
            text-align: center
            margin-bottom: 40px
    .social-box
        width: 290px

@media ( max-width: 768px )
    .social
        padding: 60px 0 75px
        .cases-pagination
            position: relative
            span
                margin: 0 3px
    .social-boxes
        flex-direction: inherit
        flex-wrap: inherit
    .social-box
        width: 100%
        height: auto
        margin-right: 0

